update link tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="">
+        <link rel="icon" type="image/jpg" href="IMG_2490.jpg" />
         <title>Meeting Minutes</title>
         
     </head>
@@ -94,7 +94,7 @@
                 </fieldset>
             <fieldset>
             <label for="location">Select a location("indoors" or "outdoors")</label>
-            <input list="location-choices" id="location" name="location">
+            <input list="location-choices" id="location" name="location" />
             <datalist id="location-choices">
                 <option value="indoors"></option>
                 <option value="outdoors"></option>
