error fix updates3

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <option value="outdoors"></option>
             </datalist>
 
-            <legend>Select a desert:</legend>
-            <select>
+            <label for="desert">Select a desert:</label>
+            <select name="desert" id="desert">
                 <option value="">-Please select a desert-</option>
                 <option value="ice-cream">Ice Cream</option>
                 <option value="cupcakes">Cupcakes</option>
