--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
                     <li>Carol</li>
                 </ul>
             <section>
-                <h3>Agenda</h3>
+                <h3 class="agenda">Agenda</h3>
                     <ol>
                         <li>Discuss importance of check-ins and communication</li>
+                        <li>Discuss upcoming tasks</li>
                     </ol>
             </section>
             
             <h2 id="#wrap-up-last-meeting-and-discussion-topics-for-today's-meeting">Wrap Up Last Meeting and Discussion Topics For Today's Meeting</h2>
             <p class="meeting-review">
-                <strong>Wrap Up Last Meeting</strong>
+                <strong class="last-meeting">Wrap Up Last Meeting</strong>
                 <i>Last meeting we discussed a, b, and c. We concluded that x, y, and z.</i>
                 <strong>Discuss Agenda Topics</strong>
                 <i>Today we will discuss check-ins, progress, and communication among the team.</i>
@@ -81,17 +82,17 @@
                 <label for="check">I communicate with coworkers</label>
                 <fieldset>
                     <legend>Select a restaurant for catered work lunch:</legend>
-                    <div>
+                    <div class="restaurant1">
                         <input type="radio" id="olive-garden" name="restaurant" value="olive-garden" />
                         <label for="olive-garden">Olive Garden</label>
                     </div>
 
-                    <div>
+                    <div class="restaurant2">
                         <input type="radio" id="blue-ocean" name="restaurant" value="blue-ocean" />
                         <label for="blue-ocean">Blue Ocean</label>
                     </div>
 
-                    <div>
+                    <div class="restaurant3">
                         <input type="radio" id="tacos" name="restaurant" value="tacos" />
                         <label for="tacos">The Taco Stand</label>
                     </div>
