--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <link rel="icon" type="image/jpg" href="IMG_2490.jpg" />
         <link rel="stylesheet" href="style.css" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+        
         <title>Meeting Minutes</title>
         <style>
             h1 {
@@ -43,9 +48,9 @@
             
             <h2 id="#wrap-up-last-meeting-and-discussion-topics-for-today's-meeting">Wrap Up Last Meeting and Discussion Topics For Today's Meeting</h2>
             <p class="meeting-review">
-                <strong class="last-meeting">Wrap Up Last Meeting</strong>
+                <strong class="last-meeting">Wrap Up Last Meeting:</strong> <br />
                 <i>Last meeting we discussed a, b, and c. We concluded that x, y, and z.</i>
-                <strong>Discuss Agenda Topics</strong>
+                <strong>Discuss Agenda Topics:</strong> <br />
                 <i>Today we will discuss check-ins, progress, and communication among the team.</i>
             </p>
             <h2 id="#comments-and-questions">Comments and Questions</h2>
